UtahLiveDataTest/src/objects/SamGovEntityCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapNS__c</fullName>
        <label>soapNS</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsi__c</fullName>
        <label>xsi</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SamGovEntityCredentials</label>
</CustomObject>